# WebScrapingAgent

./: .gitignore  pyproject.toml
app/agent/: Embeddings.py  client.py  json_tool.py  prompt.py  scraping_agent.py
app/agent/data/: unicatt.jsonl
app/agent/tools/: vector_tool.py
app/db/: DbConnection.py
app/db/models/: BaseModel.py  UnicattLatestNews.py
app/db/services/: BaseUnicattService.py  UnicattService.py
app/scraping/: WebScraper.py
tests/: test_client.py  test_db.py  test_embeddings.py  test_vector_tool.py
