[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Tommaso Biganzoli <tommasobiganzoli@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
scrapy = "^2.13.3"
dotenv = "^0.9.9"
langchain = "^0.3.26"
langchain-openai = "^0.3.27"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
langchain-community = "^0.3.27"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
