[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Tommaso Biganzoli <tommasobiganzoli@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "<2.0.0"
pinecone = ">=6.0.2,<7.0.0"
langchain = ">=0.3.23,<0.4.0"
datasets = ">=3.5.0,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
dotenv = ">=0.9.9,<0.10.0"
sentence-transformers = ">=4.0.2,<5.0.0"
faker = ">=37.1.0,<38.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
anthropic = ">=0.50.0,<0.51.0"
transformers = "^4.40"
accelerate = ">=1.6.0,<2.0.0"
sentencepiece = ">=0.2.0,<0.3.0"
diffusers = ">=0.33.1,<0.34.0"
peft = ">=0.15.2,<0.16.0"
hf-xet = ">=1.0.4,<2.0.0"
langchain-core = ">=0.3.56,<0.4.0"
requests = ">=2.32.3,<3.0.0"
langgraph = ">=0.4.1,<0.5.0"
langchain-openai = ">=0.3.15,<0.4.0"
pandas = "^2.2.3"
fastapi = "^0.116.1"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
